@@ -8,7 +8,4 @@
 echo foo | grep -D skip foo - || fail=1
 echo foo | grep --devices=skip foo || fail=1
 
-# It's more insidious when the skip option is via the envvar:
-echo foo | GREP_OPTIONS=--devices=skip grep foo || fail=1
-
 Exit $fail
